discussion/kv_engine/144962/144962_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42224: Fail the node if persistence repeatedly fails header's sync

Change-Id: Ic94969cc8acc08f33eb3e54fff557c36421097fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-02-04 17:39:33.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-04 17:42:55.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33407/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33407/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28735/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28735/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16414/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16414/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8654/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7576/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7576/ )

Compile error at [2021-02-04T17:42:33.315Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7576/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8516/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8516/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6938/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15: error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
    errCode = couchstore_commit(db, kvctx.commitData.commitFatalCallback);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:402:24: note: candidate function not viable: requires single argument "db", but 2 arguments were provided
    couchstore_error_t couchstore_commit(Db *db);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.cc:25:16: warning: pass by value and use std::move [modernize-pass-by-value]
               std::function<bool()> commitFatalCallback)
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6938/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6938/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8865/ : FAILURE

Compile error at [2021-02-04T17:41:37.687Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2903:15:
error: no matching function for call to "couchstore_commit"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8865/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5475/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
